# pkg/api/v1/auth.validator.pb.go
@@ -1,0 +1,69 @@
+// Code generated by protoc-gen-gogo. DO NOT EDIT.
+// source: auth.proto
+
+package v1
+
+import (
+	fmt "fmt"
+	proto "github.com/golang/protobuf/proto"
+	_ "github.com/grpc-ecosystem/grpc-gateway/protoc-gen-swagger/options"
+	_ "github.com/mwitkow/go-proto-validators"
+	github_com_mwitkow_go_proto_validators "github.com/mwitkow/go-proto-validators"
+	_ "google.golang.org/genproto/googleapis/api/annotations"
+	_ "google.golang.org/protobuf/types/known/emptypb"
+	math "math"
+	regexp "regexp"
+)
+
+// Reference imports to suppress errors if they are not otherwise used.
+var _ = proto.Marshal
+var _ = fmt.Errorf
+var _ = math.Inf
+
+func (this *LoginRequest) Validate() error {
+	return nil
+}
+func (this *LoginResponse) Validate() error {
+	return nil
+}
+func (this *RefreshTokenRequest) Validate() error {
+	return nil
+}
+func (this *RefreshTokenResponse) Validate() error {
+	return nil
+}
+func (this *LogoutRequest) Validate() error {
+	return nil
+}
+
+var _regex_RegisterRequest_Email = regexp.MustCompile(`^[A-Za-z0-9+_.-]+@(.+)$`)
+var _regex_RegisterRequest_PhoneNumber = regexp.MustCompile(`^[0-9]{11}$`)
+var _regex_RegisterRequest_Gender = regexp.MustCompile(`^(M|F)$`)
+
+func (this *RegisterRequest) Validate() error {
+	if !_regex_RegisterRequest_Email.MatchString(this.Email) {
+		return github_com_mwitkow_go_proto_validators.FieldError("Email", fmt.Errorf(`value '%v' must be a string conforming to regex "^[A-Za-z0-9+_.-]+@(.+)$"`, this.Email))
+	}
+	if !_regex_RegisterRequest_PhoneNumber.MatchString(this.PhoneNumber) {
+		return github_com_mwitkow_go_proto_validators.FieldError("PhoneNumber", fmt.Errorf(`value '%v' must be a string conforming to regex "^[0-9]{11}$"`, this.PhoneNumber))
+	}
+	if !_regex_RegisterRequest_Gender.MatchString(this.Gender) {
+		return github_com_mwitkow_go_proto_validators.FieldError("Gender", fmt.Errorf(`value '%v' must be a string conforming to regex "^(M|F)$"`, this.Gender))
+	}
+	if !(len(this.Password) > 7) {
+		return github_com_mwitkow_go_proto_validators.FieldError("Password", fmt.Errorf(`value '%v' must have a length greater than '7'`, this.Password))
+	}
+	if !(len(this.Password) < 65) {
+		return github_com_mwitkow_go_proto_validators.FieldError("Password", fmt.Errorf(`value '%v' must have a length smaller than '65'`, this.Password))
+	}
+	return nil
+}
+func (this *RegisterResponse) Validate() error {
+	return nil
+}
+func (this *UserInfoRequest) Validate() error {
+	return nil
+}
+func (this *UserInfoResponse) Validate() error {
+	return nil
+}
