# pkg/api/v1/search.validator.pb.go
@@ -1,0 +1,88 @@
+// Code generated by protoc-gen-gogo. DO NOT EDIT.
+// source: search.proto
+
+package v1
+
+import (
+	fmt "fmt"
+	proto "github.com/golang/protobuf/proto"
+	_ "github.com/grpc-ecosystem/grpc-gateway/protoc-gen-swagger/options"
+	github_com_mwitkow_go_proto_validators "github.com/mwitkow/go-proto-validators"
+	_ "google.golang.org/genproto/googleapis/api/annotations"
+	math "math"
+)
+
+// Reference imports to suppress errors if they are not otherwise used.
+var _ = proto.Marshal
+var _ = fmt.Errorf
+var _ = math.Inf
+
+func (this *SearchParams) Validate() error {
+	return nil
+}
+func (this *SearchRequest) Validate() error {
+	if this.Params != nil {
+		if err := github_com_mwitkow_go_proto_validators.CallValidatorIfExists(this.Params); err != nil {
+			return github_com_mwitkow_go_proto_validators.FieldError("Params", err)
+		}
+	}
+	return nil
+}
+func (this *Rating) Validate() error {
+	return nil
+}
+func (this *Category) Validate() error {
+	return nil
+}
+func (this *Product) Validate() error {
+	if this.Rate != nil {
+		if err := github_com_mwitkow_go_proto_validators.CallValidatorIfExists(this.Rate); err != nil {
+			return github_com_mwitkow_go_proto_validators.FieldError("Rate", err)
+		}
+	}
+	for _, item := range this.Categories {
+		if item != nil {
+			if err := github_com_mwitkow_go_proto_validators.CallValidatorIfExists(item); err != nil {
+				return github_com_mwitkow_go_proto_validators.FieldError("Categories", err)
+			}
+		}
+	}
+	return nil
+}
+func (this *SearchResponse) Validate() error {
+	for _, item := range this.Products {
+		if item != nil {
+			if err := github_com_mwitkow_go_proto_validators.CallValidatorIfExists(item); err != nil {
+				return github_com_mwitkow_go_proto_validators.FieldError("Products", err)
+			}
+		}
+	}
+	return nil
+}
+func (this *AsyncSearchResponse) Validate() error {
+	if this.Product != nil {
+		if err := github_com_mwitkow_go_proto_validators.CallValidatorIfExists(this.Product); err != nil {
+			return github_com_mwitkow_go_proto_validators.FieldError("Product", err)
+		}
+	}
+	return nil
+}
+func (this *CropRequest) Validate() error {
+	return nil
+}
+func (this *Position) Validate() error {
+	return nil
+}
+func (this *CropResponse) Validate() error {
+	if this.TopLeft != nil {
+		if err := github_com_mwitkow_go_proto_validators.CallValidatorIfExists(this.TopLeft); err != nil {
+			return github_com_mwitkow_go_proto_validators.FieldError("TopLeft", err)
+		}
+	}
+	if this.BottomRight != nil {
+		if err := github_com_mwitkow_go_proto_validators.CallValidatorIfExists(this.BottomRight); err != nil {
+			return github_com_mwitkow_go_proto_validators.FieldError("BottomRight", err)
+		}
+	}
+	return nil
+}
